--- a/MCA.html
+++ b/MCA.html
@@ -373,18 +373,78 @@ div.tocify {
 </div>
 
 
-<p>The third and last method of the <strong>Multivariate Analysis</strong> submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables. The data used here is the gmo data set provided with the MEDA module. <img src="images/MCA1.png" width="80%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+<p>The third and last method of the <strong>Multivariate Analysis</strong> submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables. The data used here is the gmo data set provided with the MEDA module. <img src="images/MCA1.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p>The overall structure of the MCA GUI is the same as the other two <strong>Multivariate Analysis</strong> analysis.</p>
+<p>The overall structure of the MCA GUI is the same as the other two <strong>Multivariate Analysis</strong> methods in MEDA.</p>
 <div id="variables-selection" class="section level3">
 <h3>Variables selection</h3>
-<p><img src="images/MCA2.png" width="80%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
-<p>The selection of the variables in the MCA is the same as the PCA which means that you have the individual labels, the active variables (which are qualitative unlike in the PCA where they are quantitative), and the quantitative and qualitative supplementary variables.</p>
+<p><img src="images/MCA2.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>The selection of the variables in the MCA is the same as the PCA which means that you have the individual labels, the active variables and the supplementary variables. The only difference is that the active variables in the MCA are categorical and not quantitative like in the PCA. <br><br /></p>
 </div>
 <div id="the-ventilation-level" class="section level3">
 <h3>The ventilation level</h3>
-<p><img src="images/MCA3.png" width="80%" style="display: block; margin: auto auto auto 0;" /></p>
+<p><img src="images/MCA3.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>The <strong><em>Ventilation level</em></strong> option let you fix the proportion under which a category will be ventilated. In other terms, it let you choose the proportion under which a category will be randomly assigned to another category. (This option prevent the strong impact that rare categories often have.) <br><br /></p>
+</div>
+<div id="graphic-options" class="section level3">
+<h3>Graphic options</h3>
+<p><img src="images/MCA4.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>The <strong>Graphic options</strong> allow you to choose which dimensions to plot as well as to whether to plot the either or both active and supplementary categories as well as to plot the correlation circle for the quantitative supplementary variables. Finally, the option <strong><em>Selection of categories</em></strong> highlight a set number of categories based on a criterion. In the figure above, the option is set to “cos2 10” so that the 10 categories with the largest sum of square cosine on the plotted dimensions will be highlighted on the graph. However, the square cosine is not the only criterion you can use. The other criteria are:</p>
+<ul>
+<li><p>“coord x”: highlight the x categories with the largest sums of the square coordinates on the 2 dimensions</p></li>
+<li><p>“contrib x”: highlight the x categories with the biggest contributions</p></li>
+<li><p>“dist x”: highlight the x categories with the highest distances to the center of gravity</p></li>
+</ul>
+<p><br><br /></p>
+</div>
+<div id="numerical-indicators" class="section level3">
+<h3>Numerical indicators</h3>
+<p><img src="images/MCA5.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
+<p>Since this part of the interface is identical in the PCA and CA option and given that it has already been covered in the <a href="PCA.html#numerical-indicators">PCA guide</a>, we recommend that you read the explanation there. <br><br /></p>
+</div>
+</div>
+<div id="potential-issue" class="section level2">
+<h2><strong>Potential issue</strong></h2>
+<div id="incorrect-number-of-factors" class="section level3">
+<h3>Incorrect number of factors</h3>
+<p>The number of factors option must be less than or equal to the number of active variables selected. Otherwise, the analysis will produce an error. <br><br /></p>
+</div>
+</div>
+<div id="output-example" class="section level2">
+<h2><strong>Output example</strong></h2>
+<p>For this example, we use the gmo data set and we check all the option and let the default value for the other option. We put the 10 first variable in the <em>Active Variables (&gt;1)</em> field and set the rest as categorical supplementary variable. Since the gmo data set doesn’t have any quantitative variable, we simulated two and added them as supplementary quantitative variables.</p>
+<div id="representation-of-the-individuals" class="section level3">
+<h3>Representation of the individuals</h3>
+<p><img src="images/MCA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="representation-of-the-variables" class="section level3">
+<h3>Representation of the variables</h3>
+<p><img src="images/MCA7.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="representation-of-the-categories" class="section level3">
+<h3>Representation of the categories</h3>
+<p><img src="images/MCA8.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="representation-of-the-quantitative-supplementary-variables" class="section level3">
+<h3>Representation of the quantitative supplementary variables</h3>
+<p><img src="images/MCA9.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="eigenvalue-table" class="section level3">
+<h3>Eigenvalue table</h3>
+<p><img src="images/MCA10.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="description-of-the-axes" class="section level3">
+<h3>Description of the axes</h3>
+<p><img src="images/MCA11.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="individual-tables-coordinates" class="section level3">
+<h3>Individual tables (coordinates)</h3>
+<p><img src="images/MCA12.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="variable-tables-coordinates-contribution-cosine" class="section level3">
+<h3>Variable tables (coordinates, contribution, cosine)</h3>
+<p><img src="images/MCA13.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA14.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA15.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
 </div>
 
