PCA/CA/MCA examples

--- a/MCA.html
+++ b/MCA.html
@@ -401,7 +401,7 @@ div.tocify {
 <div id="numerical-indicators" class="section level3">
 <h3>Numerical indicators</h3>
 <p><img src="images/MCA5.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
-<p>Since this part of the interface is identical in the PCA and CA option and given that it has already been covered in the <a href="PCA.html#numerical-indicators">PCA guide</a>, we recommend that you read the explanation there. <br><br /></p>
+<p>Since this part of the interface is identical in the PCA and CA GUIs and given that it has already been covered in the <a href="PCA.html#numerical-indicators">PCA guide</a>, we recommend that you read the explanation there. <br><br /></p>
 </div>
 </div>
 <div id="potential-issue" class="section level2">
@@ -413,7 +413,7 @@ div.tocify {
 </div>
 <div id="output-example" class="section level2">
 <h2><strong>Output example</strong></h2>
-<p>For this example, we use the gmo data set and we check all the option and let the default value for the other option. We put the 10 first variable in the <em>Active Variables (&gt;1)</em> field and set the rest as categorical supplementary variable. Since the gmo data set doesn’t have any quantitative variable, we simulated two and added them as supplementary quantitative variables.</p>
+<p>For this example, we use the gmo data set.. We put the 10 first variable in the <em>Active Variables (&gt;1)</em> field and set the rest as categorical supplementary variable. Since the gmo data set doesn’t have any quantitative variable, we simulated two and added them as supplementary quantitative variables. See below the figure for the settings: <img src="images/MCA16.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA17.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA18.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="representation-of-the-individuals" class="section level3">
 <h3>Representation of the individuals</h3>
 <p><img src="images/MCA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
@@ -442,8 +442,8 @@ div.tocify {
 <h3>Individual tables (coordinates)</h3>
 <p><img src="images/MCA12.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
-<div id="variable-tables-coordinates-contribution-cosine" class="section level3">
-<h3>Variable tables (coordinates, contribution, cosine)</h3>
+<div id="variable-tables-coordinates-contributions-cosines" class="section level3">
+<h3>Variable tables (coordinates, contributions, cosines)</h3>
 <p><img src="images/MCA13.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA14.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA15.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
 </div>
