--- a/PCA.html
+++ b/PCA.html
@@ -415,10 +415,30 @@ Those indicators (calculated on all the dimension from 1 to the number in the <s
 </div>
 <div id="output-example" class="section level2">
 <h2><strong>Output example</strong></h2>
-<p>The data set used for this demo is the decathlon data set.<br />
-As for the selection of the variables, see the figure below: <img src="images/PCA5.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+<p>The data set used for this demo is the decathlon data set. All the option are checked and the <em>Grouping variable</em> option is set to 1 to color the individual based on the competition they participated in. We set the value as 1 becaus Competition is the first (and only) categorical variable selected. See the figure below for the settings: <img src="images/PCA5.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/PCA13.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/PCA14.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="representation-of-the-individuals" class="section level3">
 <h3>Representation of the individuals</h3>
+<p><img src="images/PCA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="representation-of-the-variables" class="section level3">
+<h3>Representation of the variables</h3>
+<p><img src="images/PCA7.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="eigenvalue-table" class="section level3">
+<h3>Eigenvalue table</h3>
+<p><img src="images/PCA8.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="description-of-the-axes" class="section level3">
+<h3>Description of the axes</h3>
+<p><img src="images/PCA9.png" width="30%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="individual-tables-coordinates" class="section level3">
+<h3>Individual tables (coordinates)</h3>
+<p><img src="images/PCA10.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="variable-table-coordinates-contributions-cosines" class="section level3">
+<h3>Variable table (coordinates, contributions, cosines)</h3>
+<p><img src="images/PCA11.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/PCA12.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
 </div>
 
