--- a/CA.html
+++ b/CA.html
@@ -334,7 +334,7 @@ div.tocify {
       <a href="textual.html">By Textual Data</a>
     </li>
     <li>
-      <a href="descfreq.html">By Frequencies</a>
+      <a href="descfreq.html">By Columns/Rows (Contingency Table)</a>
     </li>
   </ul>
 </li>
@@ -373,10 +373,10 @@ div.tocify {
 </div>
 
 
-<p>The second analysis available in the multivariate analysis submenu is the correspondence analysis.<br />
+<p>The second analysis available in the <strong>Multivariate Analysis</strong> submenu is the correspondence analysis.<br />
 Since the CA is used on contingency table, the data used for this analysis in jamovi must contain a column with the row labels and the rest of the columns must only take as value positive integer (e.g. frequency in a contingency table). You can see an example in the figure below. <img src="images/CA1.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
-<div id="the-interface" class="section level1">
-<h1><strong>The interface</strong></h1>
+<div id="the-interface" class="section level2">
+<h2><strong>The interface</strong></h2>
 <p>The CA interface in it’s a structure is very similar to the PCA interface. From top to bottom, there are the variable suppliers, the graphic options and the numerical indicators. <br><br /></p>
 <div id="variables-selection" class="section level3">
 <h3>Variables selection</h3>
@@ -386,19 +386,55 @@ Since the CA is used on contingency table, the data used for this analysis in ja
 <div id="graphic-options" class="section level3">
 <h3>Graphic options</h3>
 <p><img src="images/CA3.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
-<p>The <strong><em>Components to Plot</em></strong> options are used to select the dimensions to be plotted on the x-axis and y-axis. The <strong><em>Quality of Representation</em></strong> options allow you to choose which rows (or columns) to highlight in the plot representing the rows (or columns). For instance, if we set 3 in the <em>Rows</em> text box, the 3 rows which are the best represented on both the x-axis and y-axis (the criteria used is the sum of the cosine on both of those axes), will be highlighted (see the figure below).</p>
+<p>The <strong><em>Components to Plot</em></strong> options are used to select the dimensions to be plotted on the x-axis and y-axis. The <strong><em>Quality of Representation</em></strong> options allow you to choose which rows (or columns) to highlight in the plot representing the rows (or columns). For instance, if we set 3 in the <em>Rows</em> text box, the 3 rows which are the best represented on both the x-axis and y-axis (the criterion used is the sum of the cosine on both of those axes), will be highlighted (see the figure below).</p>
 <p><img src="images/CA4.png" width="80%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <p>Lastly, the <strong><em>Representation of the Ellipses</em></strong> options allow you to display confidence ellipses around either or both rows and columns. Here is an example when checking the <em>Around columns</em> checkbox.</p>
 <p><img src="images/CA5.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /> You can also choose to show or not the supplementary columns on the graphs. <br><br /></p>
 </div>
 <div id="numerical-indicators" class="section level3">
 <h3>Numerical indicators</h3>
-<p><img src="images/CA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /> Since this part of the interface is identical in all three methods of the <strong>Multivariate Analysis</strong> submenu, you should go see the explanation on the <a href="PCA.html#numerical-indicators">PCA page</a> where it has already been covered. <br><br /></p>
+<p><img src="images/CA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /> Since this part of the interface is identical in all three methods of the <strong>Multivariate Analysis</strong> submenu, you should go see the explanation on the <a href="PCA.html#numerical-indicators">PCA page</a> where it has already been covered. The only difference in the case of a CA is that we talk about rows and columns (which have the same “role”) instead of individual and variable. <br><br /></p>
 </div>
 </div>
-<div id="potential-issues" class="section level1">
-<h1><strong>Potential issue(s)</strong></h1>
-<p>Unlike the PCA, where the <em>Number of factors</em> in the <strong><em>Automatic Description of the Axes</em></strong> section must be lesser than or equal to the number of active variable, here it must be strictly lower to the number of active variable (columns in this context). If this condition is not met, an error will occur (see below).</p>
+<div id="potential-issues" class="section level2">
+<h2><strong>Potential issue(s)</strong></h2>
+<p>Unlike the PCA, where the <em>Number of factors</em> in the <strong><em>Automatic Description of the Axes</em></strong> section must be less than or equal to the number of active variable, here it must be strictly lower to the number of active variable (columns in this context). If this condition is not met, an error will occur (see below). <br><br /></p>
+</div>
+<div id="output-example" class="section level2">
+<h2><strong>Output example</strong></h2>
+<p>The data used in this example is the music data set. See the figure below for the settings: <img src="images/CA7.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/CA8.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/CA9.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+<div id="representation-of-the-rows" class="section level3">
+<h3>Representation of the rows</h3>
+<p><img src="images/CA10.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="representation-of-the-columns" class="section level3">
+<h3>Representation of the columns</h3>
+<p><img src="images/CA11.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="superimposed-representation-with-ellipses" class="section level3">
+<h3>Superimposed representation with ellipses</h3>
+<p><img src="images/CA12.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="chi-squared-test" class="section level3">
+<h3>Chi-squared test</h3>
+<p><img src="images/CA13.png" width="20%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="eigenvalue-table" class="section level3">
+<h3>Eigenvalue table</h3>
+<p><img src="images/CA14.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="description-of-the-axes" class="section level3">
+<h3>Description of the axes</h3>
+<p><img src="images/CA15.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="row-tables" class="section level3">
+<h3>Row tables</h3>
+<p><img src="images/CA16.png" width="30%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
+<div id="column-table" class="section level3">
+<h3>Column table</h3>
+<p><img src="images/CA17.png" width="30%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+</div>
 </div>
 
 
