--- a/MCA.html
+++ b/MCA.html
@@ -373,10 +373,10 @@ div.tocify {
 </div>
 
 
-<p>The third and last method of the <strong>Multivariate Analysis</strong> submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables. The data used here is the gmo data set provided with the MEDA module. <img src="images/MCA1.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+<p>The third and last method of the <strong>Multivariate Analysis</strong> submenu is the multiple correspondence analysis. This analysis can take both nominal and ordinal categorical variables as active variable. The data used here is the gmo data set provided with the MEDA module. <img src="images/MCA1.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="the-interface" class="section level2">
 <h2><strong>The interface</strong></h2>
-<p>The overall structure of the MCA GUI is the same as the other two <strong>Multivariate Analysis</strong> methods in MEDA.</p>
+<p>The overall structure of the MCA GUI is the same as the other two <strong>Multivariate Analysis</strong> methods in MEDA. <br><br /></p>
 <div id="variables-selection" class="section level3">
 <h3>Variables selection</h3>
 <p><img src="images/MCA2.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
@@ -385,15 +385,15 @@ div.tocify {
 <div id="the-ventilation-level" class="section level3">
 <h3>The ventilation level</h3>
 <p><img src="images/MCA3.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
-<p>The <strong><em>Ventilation level</em></strong> option let you fix the proportion under which a category will be ventilated. In other terms, it let you choose the proportion under which a category will be randomly assigned to another category. (This option prevent the strong impact that rare categories often have.) <br><br /></p>
+<p>The <strong><em>Ventilation level</em></strong> option let you fix the proportion under which a category will be ventilated. In other terms, it let you choose the threshold under which a category will be randomly assigned to another category. <strong>This option prevent rare categories to impact strongly the analysis.</strong> <br><br /></p>
 </div>
 <div id="graphic-options" class="section level3">
 <h3>Graphic options</h3>
 <p><img src="images/MCA4.png" width="60%" style="display: block; margin: auto auto auto 0;" /></p>
-<p>The <strong>Graphic options</strong> allow you to choose which dimensions to plot as well as to whether to plot the either or both active and supplementary categories as well as to plot the correlation circle for the quantitative supplementary variables. Finally, the option <strong><em>Selection of categories</em></strong> highlight a set number of categories based on a criterion. In the figure above, the option is set to “cos2 10” so that the 10 categories with the largest sum of square cosine on the plotted dimensions will be highlighted on the graph. However, the square cosine is not the only criterion you can use. The other criteria are:</p>
+<p>The <strong>Graphic options</strong> allow you to choose which dimensions to plot. It also let you choose whether to plot either or both active and supplementary categories as well as to plot the correlation circle for the quantitative supplementary variables. Finally, the option <strong><em>Selection of categories</em></strong> highlight a set number of categories based on a criterion. In the figure above, the option is set to “cos2 10” so that the 10 categories with the largest sum of square cosine on the plotted dimensions will be highlighted on the graph. However, the square cosine is not the only criterion you can use. The other criteria are:</p>
 <ul>
 <li><p>“coord x”: highlight the x categories with the largest sums of the square coordinates on the 2 dimensions</p></li>
-<li><p>“contrib x”: highlight the x categories with the biggest contributions</p></li>
+<li><p>“contrib x”: highlight the x categories with the biggest contributions on the 2 dimensions</p></li>
 <li><p>“dist x”: highlight the x categories with the highest distances to the center of gravity</p></li>
 </ul>
 <p><br><br /></p>
@@ -408,12 +408,12 @@ div.tocify {
 <h2><strong>Potential issue</strong></h2>
 <div id="incorrect-number-of-factors" class="section level3">
 <h3>Incorrect number of factors</h3>
-<p>The number of factors option must be less than or equal to the number of active variables selected. Otherwise, the analysis will produce an error. <br><br /></p>
+<p>The <strong><em>Number of factors</em></strong> option must be less than or equal to the number of active variables selected. Otherwise, the analysis will produce an error. <br><br /></p>
 </div>
 </div>
 <div id="output-example" class="section level2">
 <h2><strong>Output example</strong></h2>
-<p>For this example, we use the gmo data set.. We put the 10 first variable in the <em>Active Variables (&gt;1)</em> field and set the rest as categorical supplementary variable. Since the gmo data set doesn’t have any quantitative variable, we simulated two and added them as supplementary quantitative variables. See below the figure for the settings: <img src="images/MCA16.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA17.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA18.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
+<p>For this example, we use the gmo data set. We put the 10 first variables in the <em>Active Variables (&gt;1)</em> field and set the rest as categorical supplementary variable. Since the gmo data set doesn’t have any quantitative variable, we simulated two dummy variables and added them as supplementary quantitative variables. See the figure below for the settings: <img src="images/MCA16.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA17.png" width="40%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA18.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 <div id="representation-of-the-individuals" class="section level3">
 <h3>Representation of the individuals</h3>
 <p><img src="images/MCA6.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
@@ -438,12 +438,12 @@ div.tocify {
 <h3>Description of the axes</h3>
 <p><img src="images/MCA11.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
-<div id="individual-tables-coordinates" class="section level3">
-<h3>Individual tables (coordinates)</h3>
+<div id="individual-tables" class="section level3">
+<h3>Individual tables</h3>
 <p><img src="images/MCA12.png" width="40%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
-<div id="variable-tables-coordinates-contributions-cosines" class="section level3">
-<h3>Variable tables (coordinates, contributions, cosines)</h3>
+<div id="variable-tables" class="section level3">
+<h3>Variable tables</h3>
 <p><img src="images/MCA13.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA14.png" width="60%" style="display: block; margin: auto auto auto 0;" /><img src="images/MCA15.png" width="60%" style="display: block; margin: auto auto auto 0;" /> <br><br /></p>
 </div>
 </div>
